# calendar-api

./: .env.example  build.sh  pyproject.toml  render.yaml  requirements.txt
app/: asgi.py  urls.py
app/settings/: base.py  local.py  production.py
modules/events/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
modules/events/migrations/: 0001_initial.py  0002_rename_users_event_user.py
modules/users/: admin.py  managers.py  models.py  serializers.py
modules/users/migrations/: 0001_initial.py  0002_remove_user_verified_email.py  0003_auto_20221015_1644.py  0004_alter_user_is_active.py
templates/account/email/: email_confirmation_message.html  email_confirmation_signup_message.html
